# terraform-ingest

./: .dockerignore  .envrc  .gitignore  .mise.toml  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  RECURSIVE_IMPLEMENTATION_SUMMARY.md  Taskfile.yml  agents.config.json  config.yaml  configure.sh  docker-compose.yml  hatch.toml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.json  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: actionsup.yaml  docker-build.yml  docker.disabled  docker.yml  docs.yaml  publish-mcp.yml  release.yaml  semantic-release.yaml  test.yaml
.nanocoder/commands/: optimize.md
docs/: CLI_MCP_COMMAND.md  DEVELOPMENT.md  DOCKER.md  DOCKER_ARCHITECTURE.md  DOCKER_CHECKLIST.md  DOCKER_COMPLETE.md  DOCKER_FINAL_REPORT.md  DOCKER_IMPLEMENTATION.md  DOCKER_INDEX.md  IGNORE_DEFAULT_BRANCH_FEATURE.md  IMPLEMENTATION.md  MCP.md  MCP_AUTO_INGESTION_FEATURE.md  QUICKSTART_EMBEDDINGS.md  README_DOCKER.md  auto_dependency_installation.md  cicd_pipeline.md  cli.md  config_command.md  docker.md  docker_arch.md  docker_complete.md  docker_guide.md  docker_index.md  docker_quick_ref.md  embeddings.md  fastmcp_configurable_instructions_FEATURE.md  import.md  index.md  mcp.md  mcp_prompts.md  mcp_registry_publishing.md  mcp_resources.md  mcp_transport_modes_FEATURE.md  mcp_use_example.md  mcp_use_examples.md  module_indexing_FEATURE.md  parser_resilience_fix.md  quickstart.md  releases_quick_ref.md  (+5 more)
examples/: README.MD  cloudposse.yaml  config-with-embeddings.yaml  config.yaml  mcp_usage.py  programmatic_usage.py
examples/terraform-project1/: CONVERSION.md  IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS.md  api_gateway.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  lambda_placeholder.js  locals.tf  outputs.tf  providers.tf  s3_cloudfront.tf  secrets.tf  terraform.tfvars.example  variables.tf
scripts/: get-github-repos.py
src/terraform_ingest/: __init__.py  api.py  cli.py  dependency_installer.py  embeddings.py  importers.py  indexer.py  ingest.py  logging.py  mcp_service.py  models.py  old-logging.py  parser.py  repository.py  tty_logger.py  validate_server.py
tasks/: Taskfile.docker.yml
tests/: __init__.py  test_api.py  test_cli_config.py  test_cli_import.py  test_dependency_installer.py  test_embeddings.py  test_importers.py  test_indexer.py  test_mcp_service.py  test_models.py  test_parser.py  test_repository.py
